--- a/inner.html
+++ b/inner.html
@@ -10,7 +10,7 @@
 <body>
     <header class="page-header">
             <nav class="main-navigation">
-                    <a class="main-header-logo" href="index.html"><img src="img/logo.svg" width="138" height="70" alt="Логотип"></a>
+                    <a class="main-header-logo" href="index.html"><img src="img/logo-sedona.svg" width="138" height="70" alt="Логотип"></a>
                     <ul class="site-navigation">
                             <li><a href="info.html">Информация</a></li>
                             <li><a href="foto.html">Фото и видео</a></li>
