--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <li><a href="info.html">Информация</a></li>
                         <li><a href="foto.html">Фото и видео</a></li>
                         <li><a href="map.html">Карта штата</a></li>
-                        <li><a href="hotels.html">Гостиницы</a></li>
+                        <li><a href="inner.html">Гостиницы</a></li>
                 </ul>
           </nav>
   </header>
@@ -115,7 +115,7 @@
                       
                       <button class="button button-search" type="button">Поиск гостиницы с Седоне</button>
               </div>
-              <div class="pop-up">
+              <div class="pop-up">       
               <img class="map" src="img/map.jpg" width="1200" height="593" alt="Карта штата Аризона">
               
               <div class="hotel-search-form-modal">
@@ -169,6 +169,7 @@
                 </a></p></div>
     </div>        
     </footer>
-</div>
+    <script src="js/modal.min.js"></script>
+    </div>
 </body>
 </html>
