--- a/inner.html
+++ b/inner.html
@@ -123,7 +123,7 @@
                                     <h3 class="visually-hidden">Вариант 1:</h3>
                                     
                                     <div class="item-foto">
-                                            <img src="img/amara.jpg" alt="Вид отеля">
+                                            <img src="img/amara.jpg" width="135" height="90" alt="Вид отеля">
                                     </div>
                                     <div class="item-options">
                                             <p class="item-name"><a href="#">Amara Resort & Spa</a></p>
