--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                   <button class="button button-search" type="button">Поиск гостиницы с Седоне</button>
                </div>
                <div class="pop-up">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.2009145377!2d-111.86535140956829!3d34.8544990976177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1536089004782" width="1200" height="593" frameborder="0" style="border:0" allowfullscreen></iframe>       
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104770.2009145377!2d-111.86535140956829!3d34.8544990976177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1536089004782" width="1200" height="593" style="border:0" allowfullscreen></iframe>       
                   <img class="map" src="img/map.jpg" width="1200" height="593" alt="Карта штата Аризона">
                   <div class="hotel-search-form-modal">
                      <form class="hotel-search-form" action="https://echo.htmlacademy.ru" method="post">
